# Distribuidos_23-24

./: directorios.json  prueba.py  pyproject.toml
config/: icebox.config
icedrive_directory/: __init__.py  app.py  delayed_response.py  directory.py  discovery.py  icedrive.ice  list.py
test/: test_directory.py
